backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend_db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend_db
  template:
    metadata:
      labels:
        app: backend_db
    spec:
      containers:
        - name: backend
          image: likoste1/board-backend:1.0
          ports:
            - containerPort: 8000
