frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend_web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend_web
  template:
    metadata:
      labels:
        app: frontend_web
    spec:
      containers:
        - name: frontend
          image: likoste1/board-frontend:1.1
          ports:
            - containerPort: 5173
          # 리소스 제한 설정
          resources:
            requests:
              cpu: 1000m # 최소 CPU 1코어
              memory: 512Mi # 최소 메모리 512Mi
            limits:
              cpu: 2000m # 최대 CPU 2코어
              memory: 1024Mi # 최대 메모리 1024Mi
