service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend_web
spec:
  selector:
    app: frontend_web
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend_db
spec:
  selector:
    app: backend_db
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP # ClusterIP 변경 필요
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      #nodePort: 30010 # ClusterIP 변경 필요
